Focus on Iphone Issues fixed

--- a/responsive.css
+++ b/responsive.css
@@ -13,7 +13,7 @@
     font-size: 50%;
   }
 
-  .input-amount {
+  input {
     font-size: 16px;
   }
 }
